complementação da documentação da APi
